@@ -25,6 +25,7 @@
 define("TREE_ORDERING_NONE", 1);
 define("TREE_ORDERING_ALPHABETIC", 2);
 define("TREE_ORDERING_NUMERIC", 3);
+define("TREE_ORDERING_NATURAL", 4);
 
 define("TREE_DEVICE_GROUPING_GRAPH_TEMPLATE", 1);
 define("TREE_DEVICE_GROUPING_DATA_QUERY_INDEX", 2);
